added 4 dimensional movement and saucer collision explosions

--- a/README
+++ b/README
@@ -10,7 +10,7 @@ On Linux
 
 Controls:
 Space - shoot
-Left and right arrow keys - go left or right
+Arrow keys - move a given direction
 Escape - exit game
 
 Released GPL by Iron Lotus Studios
