updated README and trimmed boss image

--- a/README
+++ b/README
@@ -15,5 +15,4 @@ Escape - exit game
 
 Released GPL by Iron Lotus Studios
 
-Disclaimer:
-Some artwork obtained from unknown sources.  If your artwork is featured in the game and you would like credit or take issue, please email docz2a@gmail.com.
+Art by MagykalMystique
