updated readme for MIT license

--- a/README
+++ b/README
@@ -13,6 +13,6 @@ Space - shoot
 Arrow keys - move a given direction
 Escape - exit game
 
-Released GPL by Iron Lotus Studios
+Code released under MIT license by Iron Lotus Studios
 
 Art by MagykalMystique
