--- a/todo.txt
+++ b/todo.txt
@@ -4,8 +4,6 @@ These are the outstanding tasks that I'd like to do:
 # add unit tests
 # setup ci
 #
-# add hi scores screen/storage
-#
 # find separate music for level 2
 #
 # power up spawn and InvaderBossBehave shooting probabilities are frame rate dependent
@@ -14,9 +12,11 @@ These are the outstanding tasks that I'd like to do:
 # there was a bug observed where player did not appear on the second level
 # but was not able to reproduce
 #
+# yield points for getting status modifiers
 # add ability for some saucers to shoot
 # add easy, medium, hard difficulty options
 # Ensure initial saucers spawn off screen
 # normalize ship diagonal movement
 # Replace health texts with health bars
 # Create 5 levels in total
+# Change window icon (to not pygame icon)
