--- a/todo.txt
+++ b/todo.txt
@@ -3,10 +3,8 @@ These are the outstanding tasks that I'd like to do:
 # power up spawn and InvaderBossBehave shooting probabilities are frame rate dependent
 # --- use Timer instead
 #
-# there was a bug observed where player did not appear on the second level
-# but was not able to reproduce
-#
 # yield points for getting status modifiers
+# no oneup and bomb statmods in player statmod list
 # add ability for some saucers to shoot
 # add easy, medium, hard difficulty options
 # Ensure initial saucers spawn off screen
